style.css
body {
    font-family: helvetica neue, helvetica, liberation sans, arial, sans-serif;
    font-size: 16px
}

.site-title {
  position: absolute;
  right: 1em;
}

#cy {
    position: absolute;
    left: 0;
    top: 3em;
    bottom: 5em;
    right: 0;
    z-index: 1;
}

h1 {
    color: #6581D7;
    font-size: 1em;
    font-weight: bold;
}

.top-hud {
    position: absolute;
    top: 1em;
    left: 16px;
}

#bottom {
    align-self: flex-end;
    white-space: nowrap;
    padding-left: 8px;
    padding-right: 16px;
}

#info {
    display: flex;
    justify-content: space-between;
    position: absolute;
    bottom: 8px;
    width: 100%;
}

#source-code-small {
    display: none;
    position: absolute;
    right: 8px;
    bottom: 8px;
}

a {
    color: #6581D7;
    text-decoration: none;
}

/* for mobile */

@media only screen and (max-width: 800px) {
    .site-title {
        position: relative;
        top: inherit;
        left: 8px;
    }
    .top-hud {
        position: relative;
        top: inherit;
        left: 8px;
    }
    #cy {
        top: 6.5em;
    }
    #course-descr {
        display: none;
    }
    #instructors {
        display: none;
    }
    #bottom {
        display: none;
    }
    #source-code-small {
        display: block;
    }
}

